@@ -20,6 +20,10 @@ RELEASE X.XX - XXX
   - Add support for CCVERSION and CXXVERSION variables for a number
     of C and C++ compilers.
 
+  From Ralf W. Grosse-Kunstleve:
+
+  - Accomodate anydbm modules that don't have a sync() method.
+
   From Stephen Kennedy:
 
   - Add support for a configurable global .sconsign.dbm file which
